name:                furp
version:             0.1.0.0
synopsis:            Furpin'
description:         n' derpin'
homepage:            bitemyapp.com
license:             BSD3
license-file:        LICENSE
author:              Edward Amsden and Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2015
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     FRP.Furp
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010